# edge-data-loop

./: .gitignore  CMakeLists.txt  README.md
backend/: server.py
config/: agent.conf
docs/: learning-guide.md
src/: cache_store.cpp  cache_store.h  data_packet.h  http_client.cpp  http_client.h  main.cpp  sensor_simulator.cpp  sensor_simulator.h  uploader.cpp  uploader.h
